<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:background="@color/colorSelectedTab"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.fahimshahrierrasel.mealtracker.CustomerDetailsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <TextView
            android:id="@+id/customer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:padding="5dp"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/floor_no_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/floor_no"
            android:layout_below="@id/customer_name"
            android:textAlignment="textStart"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/floor_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/mobile_no_label"
            android:text="@string/floor_no"
            android:layout_below="@id/customer_name"
            android:textAlignment="textStart"
            android:textSize="22sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/bed_no_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/floor_no"
            android:text="@string/bed_no"
            android:textAlignment="textStart"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/bed_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/floor_no"
            android:layout_toEndOf="@+id/mobile_no_label"
            android:text="@string/bed_no"
            android:textAlignment="textStart"
            android:textSize="22sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/mobile_no_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bed_no"
            android:layout_marginEnd="15dp"
            android:text="@string/mobile_no"
            android:textAlignment="textStart"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/mobile_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bed_no"
            android:layout_toEndOf="@+id/mobile_no_label"

            android:text="@string/mobile_no"
            android:textAlignment="textStart"
            android:textSize="22sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/permit_no_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mobile_no"
            android:text="@string/permit_no"
            android:textAlignment="textStart"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/permit_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mobile_no"
            android:layout_toEndOf="@+id/mobile_no_label"
            android:text="@string/permit_no"
            android:textAlignment="textStart"
            android:textSize="22sp"
            android:textStyle="bold|italic" />
    </RelativeLayout>



</android.support.v4.widget.NestedScrollView>
